Updated test cases with POJO

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">6,063</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">5,714</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">demoRestAssured.demoRAMayukh.GetAPIRequest</td><td><a href="#m0">getAllEmployee</a></td><td rowspan="1">1609159889173</td><td rowspan="1">4407</td></tr><tr class="passedeven"><td><a href="#m1">postNewEmployee</a></td><td rowspan="1">1609159893584</td><td rowspan="1">1627</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">restAssuredTests.GETAPIRequests</td><td><a href="#m0">getAllBookings</a></td><td rowspan="1">1609217130149</td><td rowspan="1">1645</td></tr><tr class="passedeven"><td><a href="#m1">getOneBooking</a></td><td rowspan="1">1609217131794</td><td rowspan="1">1296</td></tr><tr class="passedodd"><td rowspan="1">restAssuredTests.POSTAPIRequests</td><td><a href="#m2">createBooking</a></td><td rowspan="1">1609217127392</td><td rowspan="1">2745</td></tr><tr class="passedeven"><td rowspan="1">restAssuredTests.PUTAPIRequests</td><td><a href="#m3">updateBooking</a></td><td rowspan="1">1609217130149</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">demoRestAssured.demoRAMayukh.GetAPIRequest#getAllEmployee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">demoRestAssured.demoRAMayukh.GetAPIRequest#postNewEmployee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">restAssuredTests.GETAPIRequests#getAllBookings</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">restAssuredTests.GETAPIRequests#getOneBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">restAssuredTests.POSTAPIRequests#createBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">restAssuredTests.PUTAPIRequests#updateBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
