--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f8bb1">  <td>20/12/28 18:21:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPIRequest.getAllEmployee()[pri:0, instance:demoRestAssured.demoRAMayukh.GetAPIRequest@5622fdf]">getAllEmployee</td> 
+<tr bgcolor="9f8bb1">  <td>20/12/29 10:15:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POSTAPIRequests.createBooking()[pri:0, instance:restAssuredTests.POSTAPIRequests@5622fdf]">createBooking</td> 
   <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="9f8bb1">  <td>20/12/28 18:21:33</td>   <td>4411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPIRequest.postNewEmployee()[pri:0, instance:demoRestAssured.demoRAMayukh.GetAPIRequest@5622fdf]">postNewEmployee</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/12/28 18:21:28</td>   <td>-695</td> <td title="&gt;&gt;BaseTest.setBaseURI()[pri:0, instance:demoRestAssured.demoRAMayukh.GetAPIRequest@5622fdf]">&gt;&gt;setBaseURI</td> 
+<tr bgcolor="ceabc1">  <td>20/12/29 10:15:16</td>   <td>-436</td> <td title="&gt;&gt;BaseTest.setBaseURI()[pri:0, instance:restAssuredTests.POSTAPIRequests@5622fdf]">&gt;&gt;setBaseURI</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
 </table>
